fixed scrolling bottom on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -18,8 +18,11 @@ button:active {
   transform: scale(0.9);
 }
 
-.App, body, html {
+.App,
+body,
+html {
   background: $body-bg-color;
+  scroll-behavior: smooth;
 }
 
 .App {
@@ -37,6 +40,6 @@ button:active {
 }
 
 .App {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
