--- a/src/components/Messages/ChatRoomCard.scss
+++ b/src/components/Messages/ChatRoomCard.scss
@@ -3,17 +3,19 @@
 
 .chat_card {
   list-style: none;
-  margin: 2em 0;
+  margin: 3em 0;
 
+  &:nth-last-child(2) {
+    margin-bottom: 5em;
+  }
   &_item {
     .name {
       margin: 0.2em 0;
-      text-align: end;
+      margin-left: 100px;
     }
     .time {
       color: rgba(128, 128, 128, 0.567);
       text-align: center;
-      margin: 0.7em 0;
       @include mediaQuery(tablet) {
       }
     }
@@ -24,8 +26,8 @@
       flex-direction: row-reverse;
       align-items: center;
       &_text {
-        background: $accent-color;
         border-radius: $border-radius-m;
+        background: #fffffff8;
         width: 100%;
         min-height: 50px;
         padding: 1em;
@@ -33,6 +35,9 @@
 
       &_img {
         width: 80px;
+        height: 80px;
+        border-radius: 50%;
+        margin-right: 10px;
       }
     }
   }
@@ -40,13 +45,16 @@
   .currentUser {
     .main_chat {
       flex-direction: row;
+      &_text {
+        background: $accent-color;
+      }
     }
     .name {
-      text-align: start;
+      text-align: end;
+      margin-right: 100px;
     }
   }
 }
-
 // @include mediaQuery(tablet) {
 //   margin-left: 310px;
 // }
