--- a/src/components/Messages/ChatRoomForm.scss
+++ b/src/components/Messages/ChatRoomForm.scss
@@ -29,7 +29,7 @@
       width: 80%;
       border: none;
       background: transparent;
-      padding-left: 0.3em;
+      padding: 0 1em;
       font-size: 1em;
       &:focus {
         outline: none;
